# samples

./: LICENSE.md  README.md  README.zh.md  Third Party Open Source Software Notice.md
Cmake/: FindDDK.cmake  aarch64.cmake
Samples/: build_all.sh
Samples/CMake/: Ascend.cmake  Atlas200SOC.cmake  FindDDK.cmake  FindFFMPEG.cmake
Samples/Common/: CommandParser.h  Common.h  DataRecv.h  EngineImageTrans.h  RawDataBufferHigh.h  SampleMemory.h  common_data_type.h  dvpp_utils.h  error_code.h  stream_data.h  utils_common.h
Samples/Common/CropResize/: CropResize.cpp  CropResize.h
Samples/CompileDemo/: Makefile  README.md  build.sh  main.cpp  main.h
Samples/DecodeImage/: README.md  README.zh.md  graph.config  main.cpp
Samples/DecodeVideo/: .gitignore  README.md  README.zh.md  graph.config  main.cpp
Samples/DvppCrop/: README.md  README.zh.md  build.sh  graph.config  main.cpp
Samples/DvppImagePerformance/: CommandLine.h  DynamicGraph.cpp  DynamicGraph.h  README.md  README.zh.md  build.sh  main.cpp  main.h
Samples/DynamicGraph/: .gitignore  README.md  README.zh.md  main.cpp
Samples/EncodeJpeg/: README.md  README.zh.md  graph.config  main.cpp
Samples/EncodeVideo/: README.md  README.zh.md  build.sh  graph.config  main.cpp  main.h
Samples/HaSample/: CMakeLists.txt  README.md  README.zh.md  build.sh
Samples/HaSample/include/: mbox_extern.h
Samples/HaSample/src/: makefile  mbox.c  mbox.h  mbox.mk  mbox_sample.c
Samples/HelloDavinci/: CMakeLists.txt  README.md  README.zh.md  build.sh  graph.config  main.cpp  main.h
Samples/HelloDavinci/Common/include/: app_common.h
Samples/HelloDavinci/DstEngine/: DstEngine.cpp  DstEngine.h
Samples/HelloDavinci/HelloDavinci/: HelloDavinci.cpp  HelloDavinci.h
Samples/HelloDavinci/SrcEngine/: SrcEngine.cpp  SrcEngine.h
Samples/HelloDavinci/include/: AppCommon.h
Samples/InferClassification/: CMakeLists.txt  README.md  README.zh.md  graph.config  main.cpp
Samples/InferClassification/DstEngine/: DstEngine.cpp
Samples/InferClassification/JpegDecode/: JpegDecode.cpp  JpegDecode.h
Samples/InferClassification/JpegEncode/: JpegEncode.cpp  JpegEncode.h
Samples/InferClassification/MindInputFile/: MindInputFile.cpp  MindInputFile.h
Samples/InferClassification/ObjectClassification/: ObjectClassification.cpp  ObjectClassification.h
Samples/InferClassification/PngDecode/: PngDecode.cpp  PngDecode.h
Samples/InferClassification/data/models/: README.md  aipp_resnet50.cfg
Samples/InferClassification/include/: AppCommon.h  CommandLine.h
Samples/InferObjectDetection/: CommandLine.h  CustomDataRecvInterface.h  README.md  README.zh.md  build.sh  graph.config  main.cpp
Samples/InferOfflineVideo/: .gitignore  README.md  README.zh.md  build.sh  graph.config  main.cpp
Samples/LogDemo/: README.md
Samples/LogSample/: README.md  README.zh.md  graph.config  main.cpp
Samples/RTPDemo/: Makefile  README.md  RtpDemo.cpp  TCPServer.cpp  TCPServer.h
Samples/VideoPerformance/: CMakeLists.txt  README.md  README.zh.md  main.cpp
(+150 files in other folders)
